--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,91 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>chiflux</groupId>
+  <groupId>de.chiflux</groupId>
   <artifactId>entsoe-client</artifactId>
   <packaging>jar</packaging>
-  <version>1.0</version>
-  <name>entsoe-client</name>
+  <version>1.0.0</version>
+  <name>${project.groupId}:${project.artifactId}</name>
+  <description>Java Library for access the day ahead spot prices on the ENTSO-E Transparency Platform</description>
   <url>https://github.com/chiflux/entsoe-client</url>
+
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>https://mit-license.org/</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Christoph Hipp</name>
+      <email>2820785+chiflux@users.noreply.github.com</email>
+      <organization>chiflux</organization>
+      <organizationUrl>https://github.com/chiflux/entsoe-client</organizationUrl>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:http://github.com/chiflux/entsoe-client.git</connection>
+    <developerConnection>scm:git:ssh://github.com:chiflux/entsoe-client.git</developerConnection>
+    <url>https://github.com/chiflux/entsoe-client/tree/main</url>
+  </scm>
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.testSourceEncoding>UTF-8</project.build.testSourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.5.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.3.0</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <gpgArguments>
+            <arg>--batch</arg>
+          </gpgArguments>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
