--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
   <groupId>de.chiflux</groupId>
   <artifactId>entsoe-client</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0</version>
+  <version>1.0.1</version>
   <name>${project.groupId}:${project.artifactId}</name>
-  <description>Java Library for access the day ahead spot prices on the ENTSO-E Transparency Platform</description>
+  <description>Java Library for accessing day-ahead spot prices on the ENTSO-E Transparency Platform</description>
   <url>https://github.com/chiflux/entsoe-client</url>
 
   <licenses>
@@ -113,12 +113,6 @@
   </distributionManagement>
 
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
-    <dependency>
-      <groupId>com.squareup.okhttp3</groupId>
-      <artifactId>okhttp</artifactId>
-      <version>4.11.0</version>
-    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
